[package]
name = "rhino-setup"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
relm4 = { version = "0.5.0-beta.5", features = ["libadwaita"]  }
relm4-components = "0.5.0-beta.4"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
